# loomen

./: .gitignore  AGENTS.md  README.md  index.html  package.json
.codex/environments/: environment.toml
docs/: PARITY.md  ROADMAP.md  SEMANTICS.md  STATUS.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-04-30-loomen-product-direction-docs.md
docs/superpowers/specs/: 2026-04-30-loomen-product-language-design.md
script/: build_and_run.sh  spotlighter.sh  ui_smoke_check.mjs
sidecar/: index.ts
sql/: minimal-schema.sql
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  git.rs  github.rs  main.rs  pulse.rs  review.rs  settings.rs  sidecar.rs  snapshot.rs  terminal.rs
